// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/MenuItem not selected 1`] = `
.c0 {
  width: 100%;
  padding: 12px 24px;
  color: rgb(234,242,246);
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: "Monkirta",Helvetica,sans-serif;
}

.c0.active,
.c0:hover,
.c0:focus,
.c0:active {
  background-color: rgb(234,242,246);
  color: rgb(0,130,155);
}

<a
  aria-current={null}
  className="c0"
  data-testid="menu-item-route2"
  href="/route-2"
  onClick={[Function]}
>
  ROUTE 2
</a>
`;

exports[`Storyshots Components/MenuItem selected 1`] = `
.c0 {
  width: 100%;
  padding: 12px 24px;
  color: rgb(234,242,246);
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: "Monkirta",Helvetica,sans-serif;
}

.c0.active,
.c0:hover,
.c0:focus,
.c0:active {
  background-color: rgb(234,242,246);
  color: rgb(0,130,155);
}

<a
  aria-current="page"
  className="c0 active"
  data-testid="menu-item-route1"
  href="/route-1"
  onClick={[Function]}
  style={Object {}}
>
  ROUTE 1
</a>
`;
